package flatset;
/**
 * Enum View.
 *
 * Возможные значения:
 * - STREET: вид на улицу.
 * - PARK: вид на парк.
 * - BAD: плохой вид.
 * - NORMAL: обычный вид.

 */
public enum View
{
    STREET,
    PARK,
    BAD,
    NORMAL;
}
